--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ repository = "https://github.com/dimpolo/partialdebug/"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-partialdebug-derive = "0.0.1"
+partialdebug-derive = {path = "partialdebug-derive"} # TODO change back
