implement trait detection based on inherent method priority

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2018"
 repository = "https://github.com/dimpolo/partialdebug/"
 license = "MIT OR Apache-2.0"
 
+
+[features]
+unstable = ["partialdebug-derive/unstable"]
+
 [dependencies]
-partialdebug-derive = "0.1.1"
+partialdebug-derive = { path = "partialdebug-derive" }
