--- a/partialdebug-derive/Cargo.toml
+++ b/partialdebug-derive/Cargo.toml
@@ -1,11 +1,17 @@
 [package]
 name = "partialdebug-derive"
 description = "macros for partialdebug"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Dimitri Polonski"]
 edition = "2018"
 repository = "https://github.com/dimpolo/partialdebug/"
 license = "MIT OR Apache-2.0"
+
+[package.metadata.docs.rs]
+all-features = true
+
+[features]
+unstable = []
 
 [lib]
 proc-macro = true
